[package]
name = "wheel-rs"
version = "1.4.0"
edition = "2024"
authors = ["zbz"]
keywords = ["tools", "utils"]
description = "A Rust utility library providing file operations, time utilities and Duration serialization support."
categories = ["development-tools"]
license = "MIT"
homepage = "https://github.com/rusthing/wheel-rs"
repository = "https://github.com/rusthing/wheel-rs"
readme = "README.md"

[dependencies]
log = "0.4.29"
tracing = "0.1.44"
thiserror = "2.0.18"
serde = "1.0.228"
humantime = "2.3.0"
sha2 = "0.10.9"
dns-lookup = "3.0.1"
tokio = { version = "1.49.0", features = ["macros", "signal", "process", "io-util", "sync", "rt", "time"] }
bytes = "1.11.1"
nix = { version = "0.31.1", features = ["signal"] }
libc = "0.2.180"