[package]
name = "wheel-rs"
version = "1.4.0"
edition = "2024"
authors = ["zbz"]
keywords = ["tools", "utils"]
description = "A Rust utility library providing file operations, time utilities and Duration serialization support."
categories = ["development-tools"]
license = "MIT"
homepage = "https://github.com/rusthing/wheel-rs"
repository = "https://github.com/rusthing/wheel-rs"
readme = "README.md"

[dependencies]
log = "0.4.29"
tracing-appender = "0.2.4"
thiserror = "2.0.18"
serde = "1.0.228"
humantime = "2.3.0"
sha2 = "0.11.0"
hex = "0.4.3"
dns-lookup = "3.0.1"
tokio = { version = "1.51.1", features = ["macros", "signal", "process", "io-util", "sync", "rt", "time"] }
bytes = "1.11.1"
nix = { version = "0.31.2", features = ["signal"] }
libc = "1.0.0-alpha.3"
ipnet = "2.12.0"